// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreatOrderFromCart mutation test should create an order from a valid cart with resolver function: Order content 1`] = `
Object {
  "archived": false,
  "createdAt": Any<String>,
  "currentStatus": "none",
  "externalId": null,
  "guestLabel": null,
  "hasRated": null,
  "id": "MASKED ID",
  "items": Array [
    Object {
      "allergens": Array [
        "treenuts",
      ],
      "configSets": null,
      "created": null,
      "externalId": null,
      "image": null,
      "laneId": "laneId_",
      "netPackagingFee": null,
      "priceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 1,
        "priceSum": 2,
        "tax": 27,
        "taxSum": 0.43,
      },
      "productId": "seeded_unit_product_c1_g1_1_id",
      "productName": Object {
        "de": null,
        "en": "Water",
        "hu": "Viz",
      },
      "productType": "drink",
      "quantity": 2,
      "serviceFee": Object {
        "currency": "EUR",
        "netPrice": 0.16,
        "taxPercentage": 27,
      },
      "statusLog": Array [
        Object {
          "status": "none",
          "ts": "MASKED TIMESTAMP",
          "userId": "testuser+test",
        },
      ],
      "sumPriceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 1,
        "priceSum": 2,
        "tax": 27,
        "taxSum": 0.43,
      },
      "variantId": "test_generatedProductVariant_id_pseeded_unit_product_c1_g1_1_id_1",
      "variantName": Object {
        "de": null,
        "en": "VARIANT_NAME_seeded_unit_product_c1_g1_1_id",
        "hu": "VARIANT_NAME_seeded_unit_product_c1_g1_1_id",
      },
    },
    Object {
      "allergens": Array [
        "treenuts",
      ],
      "configSets": Array [
        Object {
          "items": Array [
            Object {
              "allergens": Array [
                "egg",
                "fish",
              ],
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": 1,
              "price": -1.5,
              "productComponentId": "PRODUCT_COMPONENT_ID_0101",
            },
            Object {
              "allergens": Array [
                "egg",
                "gluten",
              ],
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": null,
              "price": 2.3,
              "productComponentId": "PRODUCT_COMPONENT_ID_0102",
            },
          ],
          "name": Object {
            "de": "DE_NAME",
            "en": "EN_NAME",
            "hu": "HU_NAME",
          },
          "productSetId": "PRODUCTSET_ID_01",
          "type": "modifier",
        },
      ],
      "created": null,
      "externalId": null,
      "image": null,
      "laneId": "laneId_",
      "netPackagingFee": null,
      "priceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 1,
        "priceSum": 2,
        "tax": 27,
        "taxSum": 0.43,
      },
      "productId": "seeded_unit_product_c1_g1_1_id",
      "productName": Object {
        "de": null,
        "en": "Water",
        "hu": "Viz",
      },
      "productType": "drink",
      "quantity": 2,
      "serviceFee": Object {
        "currency": "EUR",
        "netPrice": 0.27999999999999997,
        "taxPercentage": 27,
      },
      "statusLog": Array [
        Object {
          "status": "none",
          "ts": "MASKED TIMESTAMP",
          "userId": "testuser+test",
        },
      ],
      "sumPriceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 1.8,
        "priceSum": 3.6,
        "tax": 27,
        "taxSum": 0.77,
      },
      "variantId": "test_generatedProductVariant_id_pseeded_unit_product_c1_g1_1_id_1",
      "variantName": Object {
        "de": null,
        "en": "VARIANT_NAME_seeded_unit_product_c1_g1_1_id",
        "hu": "VARIANT_NAME_seeded_unit_product_c1_g1_1_id",
      },
    },
    Object {
      "allergens": Array [
        "treenuts",
      ],
      "configSets": Array [
        Object {
          "items": Array [
            Object {
              "allergens": Array [
                "egg",
                "fish",
              ],
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": 1,
              "price": -1.5,
              "productComponentId": "PRODUCT_COMPONENT_ID_0101",
            },
            Object {
              "allergens": Array [
                "egg",
                "gluten",
              ],
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": null,
              "price": 2.3,
              "productComponentId": "PRODUCT_COMPONENT_ID_0102",
            },
          ],
          "name": Object {
            "de": "DE_NAME",
            "en": "EN_NAME",
            "hu": "HU_NAME",
          },
          "productSetId": "PRODUCTSET_ID_01",
          "type": "modifier",
        },
        Object {
          "items": Array [
            Object {
              "allergens": null,
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": null,
              "price": 5,
              "productComponentId": "PRODUCT_COMPONENT_ID_0201",
            },
            Object {
              "allergens": Array [
                "peanut",
              ],
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": null,
              "price": -1,
              "productComponentId": "PRODUCT_COMPONENT_ID_0202",
            },
          ],
          "name": Object {
            "de": "DE_NAME",
            "en": "EN_NAME",
            "hu": "HU_NAME",
          },
          "productSetId": "PRODUCTSET_ID_02",
          "type": "modifier",
        },
      ],
      "created": null,
      "externalId": null,
      "image": null,
      "laneId": "laneId_",
      "netPackagingFee": null,
      "priceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 1,
        "priceSum": 2,
        "tax": 27,
        "taxSum": 0.43,
      },
      "productId": "seeded_unit_product_c1_g1_1_id",
      "productName": Object {
        "de": null,
        "en": "Water",
        "hu": "Viz",
      },
      "productType": "drink",
      "quantity": 2,
      "serviceFee": Object {
        "currency": "EUR",
        "netPrice": 0.9099999999999999,
        "taxPercentage": 27,
      },
      "statusLog": Array [
        Object {
          "status": "none",
          "ts": "MASKED TIMESTAMP",
          "userId": "testuser+test",
        },
      ],
      "sumPriceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 5.8,
        "priceSum": 11.6,
        "tax": 27,
        "taxSum": 2.47,
      },
      "variantId": "test_generatedProductVariant_id_pseeded_unit_product_c1_g1_1_id_1",
      "variantName": Object {
        "de": null,
        "en": "VARIANT_NAME_seeded_unit_product_c1_g1_1_id",
        "hu": "VARIANT_NAME_seeded_unit_product_c1_g1_1_id",
      },
    },
  ],
  "orderMode": "instant",
  "orderNum": "001",
  "orderPolicy": null,
  "packagingFeeTaxPercentage": null,
  "packagingSum": null,
  "paymentIntention": null,
  "paymentMode": Object {
    "caption": null,
    "method": "inapp",
    "type": "stripe",
  },
  "place": Object {
    "seat": "SEAT",
    "table": "TABLE",
  },
  "rating": null,
  "ratingPolicies": Array [
    Object {
      "description": Object {
        "de": null,
        "en": "Desc",
        "hu": null,
      },
      "key": "question1",
      "ratings": Array [
        Object {
          "icon": null,
          "text": Object {
            "de": null,
            "en": "good",
            "hu": null,
          },
          "value": 1,
        },
      ],
      "title": Object {
        "de": null,
        "en": "Question",
        "hu": null,
      },
    },
  ],
  "serviceFee": Object {
    "currency": "EUR",
    "grossPrice": 1.7145,
    "taxContent": 0.3645,
  },
  "serviceFeePolicy": Object {
    "percentage": 10,
    "type": "applicable",
  },
  "servingMode": "inPlace",
  "soldOutVisibilityPolicy": null,
  "statusLog": Array [
    Object {
      "status": "none",
      "ts": "MASKED TIMESTAMP",
      "userId": "testuser+test",
    },
  ],
  "sumPriceShown": Object {
    "currency": "EUR",
    "pricePerUnit": 0,
    "priceSum": 17.2,
    "tax": 0,
    "taxSum": 3.66,
  },
  "tip": null,
  "tipPolicy": Object {
    "description": null,
    "minOtherAmount": null,
    "percents": Array [
      2,
    ],
    "title": null,
  },
  "tipTransaction": null,
  "tipTransactionId": null,
  "tipTransactionStatus": null,
  "transaction": null,
  "transactionId": null,
  "transactionStatus": "waiting_for_payment",
  "unitId": "test_unit_1_id",
  "unpayCategory": null,
  "updatedAt": Any<String>,
  "userId": "testuser+test",
  "version": null,
}
`;

exports[`CreatOrderFromCart mutation test should create an order from a valid cart with resolver function: Takeaway order content 1`] = `
Object {
  "archived": false,
  "createdAt": Any<String>,
  "currentStatus": "none",
  "externalId": null,
  "guestLabel": null,
  "hasRated": null,
  "id": "MASKED ID",
  "items": Array [
    Object {
      "allergens": Array [
        "treenuts",
      ],
      "configSets": null,
      "created": null,
      "externalId": null,
      "image": null,
      "laneId": "laneId_",
      "netPackagingFee": 1,
      "priceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 1,
        "priceSum": 2,
        "tax": 53,
        "taxSum": 0.69,
      },
      "productId": "seeded_unit_product_c1_g1_1_id",
      "productName": Object {
        "de": null,
        "en": "Water",
        "hu": "Viz",
      },
      "productType": "drink",
      "quantity": 2,
      "serviceFee": null,
      "statusLog": Array [
        Object {
          "status": "none",
          "ts": "MASKED TIMESTAMP",
          "userId": "testuser+test",
        },
      ],
      "sumPriceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 1,
        "priceSum": 2,
        "tax": 53,
        "taxSum": 0.69,
      },
      "variantId": "test_generatedProductVariant_id_pseeded_unit_product_c1_g1_1_id_1",
      "variantName": Object {
        "de": null,
        "en": "VARIANT_NAME_seeded_unit_product_c1_g1_1_id",
        "hu": "VARIANT_NAME_seeded_unit_product_c1_g1_1_id",
      },
    },
    Object {
      "allergens": Array [
        "treenuts",
      ],
      "configSets": Array [
        Object {
          "items": Array [
            Object {
              "allergens": Array [
                "egg",
                "fish",
              ],
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": 1,
              "price": -1.5,
              "productComponentId": "PRODUCT_COMPONENT_ID_0101",
            },
            Object {
              "allergens": Array [
                "egg",
                "gluten",
              ],
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": 0,
              "price": 2.3,
              "productComponentId": "PRODUCT_COMPONENT_ID_0102",
            },
          ],
          "name": Object {
            "de": "DE_NAME",
            "en": "EN_NAME",
            "hu": "HU_NAME",
          },
          "productSetId": "PRODUCTSET_ID_01",
          "type": "modifier",
        },
      ],
      "created": null,
      "externalId": null,
      "image": null,
      "laneId": "laneId_",
      "netPackagingFee": 1,
      "priceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 1,
        "priceSum": 2,
        "tax": 53,
        "taxSum": 0.69,
      },
      "productId": "seeded_unit_product_c1_g1_1_id",
      "productName": Object {
        "de": null,
        "en": "Water",
        "hu": "Viz",
      },
      "productType": "drink",
      "quantity": 2,
      "serviceFee": null,
      "statusLog": Array [
        Object {
          "status": "none",
          "ts": "MASKED TIMESTAMP",
          "userId": "testuser+test",
        },
      ],
      "sumPriceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 1.8,
        "priceSum": 3.6,
        "tax": 53,
        "taxSum": 1.25,
      },
      "variantId": "test_generatedProductVariant_id_pseeded_unit_product_c1_g1_1_id_1",
      "variantName": Object {
        "de": null,
        "en": "VARIANT_NAME_seeded_unit_product_c1_g1_1_id",
        "hu": "VARIANT_NAME_seeded_unit_product_c1_g1_1_id",
      },
    },
    Object {
      "allergens": Array [
        "treenuts",
      ],
      "configSets": Array [
        Object {
          "items": Array [
            Object {
              "allergens": Array [
                "egg",
                "fish",
              ],
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": 1,
              "price": -1.5,
              "productComponentId": "PRODUCT_COMPONENT_ID_0101",
            },
            Object {
              "allergens": Array [
                "egg",
                "gluten",
              ],
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": 0,
              "price": 2.3,
              "productComponentId": "PRODUCT_COMPONENT_ID_0102",
            },
          ],
          "name": Object {
            "de": "DE_NAME",
            "en": "EN_NAME",
            "hu": "HU_NAME",
          },
          "productSetId": "PRODUCTSET_ID_01",
          "type": "modifier",
        },
        Object {
          "items": Array [
            Object {
              "allergens": null,
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": 0,
              "price": 5,
              "productComponentId": "PRODUCT_COMPONENT_ID_0201",
            },
            Object {
              "allergens": Array [
                "peanut",
              ],
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": 0,
              "price": -1,
              "productComponentId": "PRODUCT_COMPONENT_ID_0202",
            },
          ],
          "name": Object {
            "de": "DE_NAME",
            "en": "EN_NAME",
            "hu": "HU_NAME",
          },
          "productSetId": "PRODUCTSET_ID_02",
          "type": "modifier",
        },
      ],
      "created": null,
      "externalId": null,
      "image": null,
      "laneId": "laneId_",
      "netPackagingFee": 1,
      "priceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 1,
        "priceSum": 2,
        "tax": 53,
        "taxSum": 0.69,
      },
      "productId": "seeded_unit_product_c1_g1_1_id",
      "productName": Object {
        "de": null,
        "en": "Water",
        "hu": "Viz",
      },
      "productType": "drink",
      "quantity": 2,
      "serviceFee": null,
      "statusLog": Array [
        Object {
          "status": "none",
          "ts": "MASKED TIMESTAMP",
          "userId": "testuser+test",
        },
      ],
      "sumPriceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 5.8,
        "priceSum": 11.6,
        "tax": 53,
        "taxSum": 4.02,
      },
      "variantId": "test_generatedProductVariant_id_pseeded_unit_product_c1_g1_1_id_1",
      "variantName": Object {
        "de": null,
        "en": "VARIANT_NAME_seeded_unit_product_c1_g1_1_id",
        "hu": "VARIANT_NAME_seeded_unit_product_c1_g1_1_id",
      },
    },
  ],
  "orderMode": "instant",
  "orderNum": "003",
  "orderPolicy": null,
  "packagingFeeTaxPercentage": null,
  "packagingSum": Object {
    "currency": "EUR",
    "netPrice": 10,
    "taxPercentage": 27,
  },
  "paymentIntention": null,
  "paymentMode": Object {
    "caption": null,
    "method": "inapp",
    "type": "stripe",
  },
  "place": Object {
    "seat": "SEAT",
    "table": "TABLE",
  },
  "rating": null,
  "ratingPolicies": Array [
    Object {
      "description": Object {
        "de": null,
        "en": "Desc",
        "hu": null,
      },
      "key": "question1",
      "ratings": Array [
        Object {
          "icon": null,
          "text": Object {
            "de": null,
            "en": "good",
            "hu": null,
          },
          "value": 1,
        },
      ],
      "title": Object {
        "de": null,
        "en": "Question",
        "hu": null,
      },
    },
  ],
  "serviceFee": null,
  "serviceFeePolicy": Object {
    "percentage": 10,
    "type": "applicable",
  },
  "servingMode": "takeAway",
  "soldOutVisibilityPolicy": null,
  "statusLog": Array [
    Object {
      "status": "none",
      "ts": "MASKED TIMESTAMP",
      "userId": "testuser+test",
    },
  ],
  "sumPriceShown": Object {
    "currency": "EUR",
    "pricePerUnit": 0,
    "priceSum": 29.9,
    "tax": 0,
    "taxSum": 8.66,
  },
  "tip": null,
  "tipPolicy": Object {
    "description": null,
    "minOtherAmount": null,
    "percents": Array [
      2,
    ],
    "title": null,
  },
  "tipTransaction": null,
  "tipTransactionId": null,
  "tipTransactionStatus": null,
  "transaction": null,
  "transactionId": null,
  "transactionStatus": "waiting_for_payment",
  "unitId": "test_unit_1_id",
  "unpayCategory": null,
  "updatedAt": Any<String>,
  "userId": "testuser+test",
  "version": null,
}
`;

exports[`CreatOrderFromCart mutation test should create an order from a valid cart with resolver function: fail in case the cart is not the user's 1`] = `"Cart is missing"`;

exports[`CreatOrderFromCart mutation test should create an order from a valid cart with resolver function: fail without a cart 1`] = `[Error: Cart is missing: test_NOT_EXSISTING_CART]`;

exports[`CreatOrderFromCart mutation test should create an order from a valid cart with resolver function: fail without a unit 1`] = `"{\\"message\\":\\"Unit is not accepting orders right now. Try it later!\\",\\"code\\":\\"ERROR_UNIT_NOT_ACCEPTING_ORDERS\\"}"`;

exports[`CreatOrderFromCart mutation test should create an order from a valid cart with server: Order content 1`] = `
Object {
  "archived": false,
  "createdAt": Any<String>,
  "currentStatus": "none",
  "externalId": null,
  "guestLabel": null,
  "hasRated": null,
  "id": "MASKED ID",
  "items": Array [
    Object {
      "allergens": Array [
        "treenuts",
      ],
      "configSets": null,
      "created": null,
      "externalId": null,
      "image": null,
      "laneId": "laneId_",
      "netPackagingFee": null,
      "priceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 1,
        "priceSum": 2,
        "tax": 27,
        "taxSum": 0.43,
      },
      "productId": "seeded_unit_product_c1_g1_1_id",
      "productName": Object {
        "de": null,
        "en": "Water",
        "hu": "Viz",
      },
      "productType": "drink",
      "quantity": 2,
      "serviceFee": Object {
        "currency": "EUR",
        "netPrice": 0.16,
        "taxPercentage": 27,
      },
      "statusLog": Array [
        Object {
          "status": "none",
          "ts": "MASKED TIMESTAMP",
          "userId": "testuser+test",
        },
      ],
      "sumPriceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 1,
        "priceSum": 2,
        "tax": 27,
        "taxSum": 0.43,
      },
      "variantId": "test_generatedProductVariant_id_pseeded_unit_product_c1_g1_1_id_1",
      "variantName": Object {
        "de": null,
        "en": "VARIANT_NAME_seeded_unit_product_c1_g1_1_id",
        "hu": "VARIANT_NAME_seeded_unit_product_c1_g1_1_id",
      },
    },
    Object {
      "allergens": Array [
        "treenuts",
      ],
      "configSets": Array [
        Object {
          "items": Array [
            Object {
              "allergens": Array [
                "egg",
                "fish",
              ],
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": 1,
              "price": -1.5,
              "productComponentId": "PRODUCT_COMPONENT_ID_0101",
            },
            Object {
              "allergens": Array [
                "egg",
                "gluten",
              ],
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": null,
              "price": 2.3,
              "productComponentId": "PRODUCT_COMPONENT_ID_0102",
            },
          ],
          "name": Object {
            "de": "DE_NAME",
            "en": "EN_NAME",
            "hu": "HU_NAME",
          },
          "productSetId": "PRODUCTSET_ID_01",
          "type": "modifier",
        },
      ],
      "created": null,
      "externalId": null,
      "image": null,
      "laneId": "laneId_",
      "netPackagingFee": null,
      "priceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 1,
        "priceSum": 2,
        "tax": 27,
        "taxSum": 0.43,
      },
      "productId": "seeded_unit_product_c1_g1_1_id",
      "productName": Object {
        "de": null,
        "en": "Water",
        "hu": "Viz",
      },
      "productType": "drink",
      "quantity": 2,
      "serviceFee": Object {
        "currency": "EUR",
        "netPrice": 0.27999999999999997,
        "taxPercentage": 27,
      },
      "statusLog": Array [
        Object {
          "status": "none",
          "ts": "MASKED TIMESTAMP",
          "userId": "testuser+test",
        },
      ],
      "sumPriceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 1.8,
        "priceSum": 3.6,
        "tax": 27,
        "taxSum": 0.77,
      },
      "variantId": "test_generatedProductVariant_id_pseeded_unit_product_c1_g1_1_id_1",
      "variantName": Object {
        "de": null,
        "en": "VARIANT_NAME_seeded_unit_product_c1_g1_1_id",
        "hu": "VARIANT_NAME_seeded_unit_product_c1_g1_1_id",
      },
    },
    Object {
      "allergens": Array [
        "treenuts",
      ],
      "configSets": Array [
        Object {
          "items": Array [
            Object {
              "allergens": Array [
                "egg",
                "fish",
              ],
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": 1,
              "price": -1.5,
              "productComponentId": "PRODUCT_COMPONENT_ID_0101",
            },
            Object {
              "allergens": Array [
                "egg",
                "gluten",
              ],
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": null,
              "price": 2.3,
              "productComponentId": "PRODUCT_COMPONENT_ID_0102",
            },
          ],
          "name": Object {
            "de": "DE_NAME",
            "en": "EN_NAME",
            "hu": "HU_NAME",
          },
          "productSetId": "PRODUCTSET_ID_01",
          "type": "modifier",
        },
        Object {
          "items": Array [
            Object {
              "allergens": null,
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": null,
              "price": 5,
              "productComponentId": "PRODUCT_COMPONENT_ID_0201",
            },
            Object {
              "allergens": Array [
                "peanut",
              ],
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": null,
              "price": -1,
              "productComponentId": "PRODUCT_COMPONENT_ID_0202",
            },
          ],
          "name": Object {
            "de": "DE_NAME",
            "en": "EN_NAME",
            "hu": "HU_NAME",
          },
          "productSetId": "PRODUCTSET_ID_02",
          "type": "modifier",
        },
      ],
      "created": null,
      "externalId": null,
      "image": null,
      "laneId": "laneId_",
      "netPackagingFee": null,
      "priceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 1,
        "priceSum": 2,
        "tax": 27,
        "taxSum": 0.43,
      },
      "productId": "seeded_unit_product_c1_g1_1_id",
      "productName": Object {
        "de": null,
        "en": "Water",
        "hu": "Viz",
      },
      "productType": "drink",
      "quantity": 2,
      "serviceFee": Object {
        "currency": "EUR",
        "netPrice": 0.9099999999999999,
        "taxPercentage": 27,
      },
      "statusLog": Array [
        Object {
          "status": "none",
          "ts": "MASKED TIMESTAMP",
          "userId": "testuser+test",
        },
      ],
      "sumPriceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 5.8,
        "priceSum": 11.6,
        "tax": 27,
        "taxSum": 2.47,
      },
      "variantId": "test_generatedProductVariant_id_pseeded_unit_product_c1_g1_1_id_1",
      "variantName": Object {
        "de": null,
        "en": "VARIANT_NAME_seeded_unit_product_c1_g1_1_id",
        "hu": "VARIANT_NAME_seeded_unit_product_c1_g1_1_id",
      },
    },
  ],
  "orderMode": "instant",
  "orderNum": "001",
  "orderPolicy": null,
  "packagingFeeTaxPercentage": null,
  "packagingSum": null,
  "paymentIntention": null,
  "paymentMode": Object {
    "caption": null,
    "method": "inapp",
    "type": "stripe",
  },
  "place": Object {
    "seat": "SEAT",
    "table": "TABLE",
  },
  "rating": null,
  "ratingPolicies": Array [
    Object {
      "description": Object {
        "de": null,
        "en": "Desc",
        "hu": null,
      },
      "key": "question1",
      "ratings": Array [
        Object {
          "icon": null,
          "text": Object {
            "de": null,
            "en": "good",
            "hu": null,
          },
          "value": 1,
        },
      ],
      "title": Object {
        "de": null,
        "en": "Question",
        "hu": null,
      },
    },
  ],
  "serviceFee": Object {
    "currency": "EUR",
    "grossPrice": 1.7145,
    "taxContent": 0.3645,
  },
  "serviceFeePolicy": Object {
    "percentage": 10,
    "type": "applicable",
  },
  "servingMode": "inPlace",
  "soldOutVisibilityPolicy": null,
  "statusLog": Array [
    Object {
      "status": "none",
      "ts": "MASKED TIMESTAMP",
      "userId": "testuser+test",
    },
  ],
  "sumPriceShown": Object {
    "currency": "EUR",
    "pricePerUnit": 0,
    "priceSum": 17.2,
    "tax": 0,
    "taxSum": 3.66,
  },
  "tip": null,
  "tipPolicy": Object {
    "description": null,
    "minOtherAmount": null,
    "percents": Array [
      2,
    ],
    "title": null,
  },
  "tipTransaction": null,
  "tipTransactionId": null,
  "tipTransactionStatus": null,
  "transaction": null,
  "transactionId": null,
  "transactionStatus": "waiting_for_payment",
  "unitId": "test_unit_1_id",
  "unpayCategory": null,
  "updatedAt": Any<String>,
  "userId": "testuser+test",
  "version": null,
}
`;

exports[`CreatOrderFromCart mutation test should create an order from a valid cart with server: Takeaway order content 1`] = `
Object {
  "archived": false,
  "createdAt": Any<String>,
  "currentStatus": "none",
  "externalId": null,
  "guestLabel": null,
  "hasRated": null,
  "id": "MASKED ID",
  "items": Array [
    Object {
      "allergens": Array [
        "treenuts",
      ],
      "configSets": null,
      "created": null,
      "externalId": null,
      "image": null,
      "laneId": "laneId_",
      "netPackagingFee": 1,
      "priceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 1,
        "priceSum": 2,
        "tax": 53,
        "taxSum": 0.69,
      },
      "productId": "seeded_unit_product_c1_g1_1_id",
      "productName": Object {
        "de": null,
        "en": "Water",
        "hu": "Viz",
      },
      "productType": "drink",
      "quantity": 2,
      "serviceFee": null,
      "statusLog": Array [
        Object {
          "status": "none",
          "ts": "MASKED TIMESTAMP",
          "userId": "testuser+test",
        },
      ],
      "sumPriceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 1,
        "priceSum": 2,
        "tax": 53,
        "taxSum": 0.69,
      },
      "variantId": "test_generatedProductVariant_id_pseeded_unit_product_c1_g1_1_id_1",
      "variantName": Object {
        "de": null,
        "en": "VARIANT_NAME_seeded_unit_product_c1_g1_1_id",
        "hu": "VARIANT_NAME_seeded_unit_product_c1_g1_1_id",
      },
    },
    Object {
      "allergens": Array [
        "treenuts",
      ],
      "configSets": Array [
        Object {
          "items": Array [
            Object {
              "allergens": Array [
                "egg",
                "fish",
              ],
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": 1,
              "price": -1.5,
              "productComponentId": "PRODUCT_COMPONENT_ID_0101",
            },
            Object {
              "allergens": Array [
                "egg",
                "gluten",
              ],
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": 0,
              "price": 2.3,
              "productComponentId": "PRODUCT_COMPONENT_ID_0102",
            },
          ],
          "name": Object {
            "de": "DE_NAME",
            "en": "EN_NAME",
            "hu": "HU_NAME",
          },
          "productSetId": "PRODUCTSET_ID_01",
          "type": "modifier",
        },
      ],
      "created": null,
      "externalId": null,
      "image": null,
      "laneId": "laneId_",
      "netPackagingFee": 1,
      "priceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 1,
        "priceSum": 2,
        "tax": 53,
        "taxSum": 0.69,
      },
      "productId": "seeded_unit_product_c1_g1_1_id",
      "productName": Object {
        "de": null,
        "en": "Water",
        "hu": "Viz",
      },
      "productType": "drink",
      "quantity": 2,
      "serviceFee": null,
      "statusLog": Array [
        Object {
          "status": "none",
          "ts": "MASKED TIMESTAMP",
          "userId": "testuser+test",
        },
      ],
      "sumPriceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 1.8,
        "priceSum": 3.6,
        "tax": 53,
        "taxSum": 1.25,
      },
      "variantId": "test_generatedProductVariant_id_pseeded_unit_product_c1_g1_1_id_1",
      "variantName": Object {
        "de": null,
        "en": "VARIANT_NAME_seeded_unit_product_c1_g1_1_id",
        "hu": "VARIANT_NAME_seeded_unit_product_c1_g1_1_id",
      },
    },
    Object {
      "allergens": Array [
        "treenuts",
      ],
      "configSets": Array [
        Object {
          "items": Array [
            Object {
              "allergens": Array [
                "egg",
                "fish",
              ],
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": 1,
              "price": -1.5,
              "productComponentId": "PRODUCT_COMPONENT_ID_0101",
            },
            Object {
              "allergens": Array [
                "egg",
                "gluten",
              ],
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": 0,
              "price": 2.3,
              "productComponentId": "PRODUCT_COMPONENT_ID_0102",
            },
          ],
          "name": Object {
            "de": "DE_NAME",
            "en": "EN_NAME",
            "hu": "HU_NAME",
          },
          "productSetId": "PRODUCTSET_ID_01",
          "type": "modifier",
        },
        Object {
          "items": Array [
            Object {
              "allergens": null,
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": 0,
              "price": 5,
              "productComponentId": "PRODUCT_COMPONENT_ID_0201",
            },
            Object {
              "allergens": Array [
                "peanut",
              ],
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": 0,
              "price": -1,
              "productComponentId": "PRODUCT_COMPONENT_ID_0202",
            },
          ],
          "name": Object {
            "de": "DE_NAME",
            "en": "EN_NAME",
            "hu": "HU_NAME",
          },
          "productSetId": "PRODUCTSET_ID_02",
          "type": "modifier",
        },
      ],
      "created": null,
      "externalId": null,
      "image": null,
      "laneId": "laneId_",
      "netPackagingFee": 1,
      "priceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 1,
        "priceSum": 2,
        "tax": 53,
        "taxSum": 0.69,
      },
      "productId": "seeded_unit_product_c1_g1_1_id",
      "productName": Object {
        "de": null,
        "en": "Water",
        "hu": "Viz",
      },
      "productType": "drink",
      "quantity": 2,
      "serviceFee": null,
      "statusLog": Array [
        Object {
          "status": "none",
          "ts": "MASKED TIMESTAMP",
          "userId": "testuser+test",
        },
      ],
      "sumPriceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 5.8,
        "priceSum": 11.6,
        "tax": 53,
        "taxSum": 4.02,
      },
      "variantId": "test_generatedProductVariant_id_pseeded_unit_product_c1_g1_1_id_1",
      "variantName": Object {
        "de": null,
        "en": "VARIANT_NAME_seeded_unit_product_c1_g1_1_id",
        "hu": "VARIANT_NAME_seeded_unit_product_c1_g1_1_id",
      },
    },
  ],
  "orderMode": "instant",
  "orderNum": "003",
  "orderPolicy": null,
  "packagingFeeTaxPercentage": null,
  "packagingSum": Object {
    "currency": "EUR",
    "netPrice": 10,
    "taxPercentage": 27,
  },
  "paymentIntention": null,
  "paymentMode": Object {
    "caption": null,
    "method": "inapp",
    "type": "stripe",
  },
  "place": Object {
    "seat": "SEAT",
    "table": "TABLE",
  },
  "rating": null,
  "ratingPolicies": Array [
    Object {
      "description": Object {
        "de": null,
        "en": "Desc",
        "hu": null,
      },
      "key": "question1",
      "ratings": Array [
        Object {
          "icon": null,
          "text": Object {
            "de": null,
            "en": "good",
            "hu": null,
          },
          "value": 1,
        },
      ],
      "title": Object {
        "de": null,
        "en": "Question",
        "hu": null,
      },
    },
  ],
  "serviceFee": null,
  "serviceFeePolicy": Object {
    "percentage": 10,
    "type": "applicable",
  },
  "servingMode": "takeAway",
  "soldOutVisibilityPolicy": null,
  "statusLog": Array [
    Object {
      "status": "none",
      "ts": "MASKED TIMESTAMP",
      "userId": "testuser+test",
    },
  ],
  "sumPriceShown": Object {
    "currency": "EUR",
    "pricePerUnit": 0,
    "priceSum": 29.9,
    "tax": 0,
    "taxSum": 8.66,
  },
  "tip": null,
  "tipPolicy": Object {
    "description": null,
    "minOtherAmount": null,
    "percents": Array [
      2,
    ],
    "title": null,
  },
  "tipTransaction": null,
  "tipTransactionId": null,
  "tipTransactionStatus": null,
  "transaction": null,
  "transactionId": null,
  "transactionStatus": "waiting_for_payment",
  "unitId": "test_unit_1_id",
  "unpayCategory": null,
  "updatedAt": Any<String>,
  "userId": "testuser+test",
  "version": null,
}
`;

exports[`CreatOrderFromCart mutation test should create an order from a valid cart with server: fail in case the cart is not the user's 1`] = `[Error: GraphQL error: Cart is missing]`;

exports[`CreatOrderFromCart mutation test should create an order from a valid cart with server: fail without a cart 1`] = `[Error: GraphQL error: Cart is missing: test_NOT_EXSISTING_CART]`;

exports[`CreatOrderFromCart mutation test should create an order from a valid cart with server: fail without a unit 1`] = `[Error: GraphQL error: {"message":"Unit is not accepting orders right now. Try it later!","code":"ERROR_UNIT_NOT_ACCEPTING_ORDERS"}]`;

exports[`CreatOrderFromCart mutation test should fail in case the cart is not the user's 1`] = `"Cart is missing"`;

exports[`CreatOrderFromCart mutation test should fail without a unit 1`] = `"{\\"message\\":\\"Unit is not accepting orders right now. Try it later!\\",\\"code\\":\\"ERROR_UNIT_NOT_ACCEPTING_ORDERS\\"}"`;
